[metadata]
name = heroku-py
version = attr: heroku_py.__version__
author = Orji Uchechukwu
author_email = orjiuchechukwu52@yahoo.com
description = A Python3 wrapper around the v3 Heroku API.
keywords = Heroku, Heroku API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elfkuzco/heroku-py
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3
zip_safe = False
include_package_data = True
install_requires =
    requests >= 2.22.0

[options.packages.find]
exclude = tests

[flake8]
ignore = E501,E122,E305,E302,E303,W292,W503,E266,E308,W605
